[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.8.0,<4"]

[project]
name = "spgolfsw"
version = "1.0.0"
authors = [
    {name = "Thomas H. Simm", email = "you@yourdomain.com"},
]
description = "Python package for streamlit to analyse golf swings."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "streamlit >=1.27",
    "torch >=2.1.0",
    "torchvision >=0.16.0",
    "pandas >=2.1",
    "opencv-python-headless",
    "scipy >=1.11.3",
    "Pillow",
    "matplotlib >=3.8.0",
    "numpy >=1.26.0",
    "black >=23.9.1",
    "pre-commit"
]

[tool.black]
line-length = 88
target-version = ['py37', 'py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # The following are specific to Black, you probably don't want those.
  tests/data
  | profiling
)/
'''
# We use preview style for formatting Black itself. If you
# want stable formatting across releases, you should keep
# this off.
preview = true

# Build system information and other project-specific configuration below.
# NOTE: You don't need this in your own Black configuration.